--- a/app/src/main/res/layout/activity_add_evaluation.xml
+++ b/app/src/main/res/layout/activity_add_evaluation.xml
@@ -57,6 +57,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:hint="Fecha" />
             </com.google.android.material.textfield.TextInputLayout>
 
