--- a/app/src/main/res/layout/activity_evaluations.xml
+++ b/app/src/main/res/layout/activity_evaluations.xml
@@ -69,7 +69,7 @@
                 android:text="Buscar" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/activity_evaluations_tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mis evaluaciones" />
