--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login" />
+            <Button
+                android:id="@+id/activity_login_btn_signup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Registrarse" />
 
         </LinearLayout>
     </ScrollView>
